--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <span id="value">0</span>
 
     <div class="buttons">
-      <button class="btn btn-outline-dark btn-lg">DECREASE</button>
-      <button class="btn btn-outline-dark btn-lg">RESET</button>
-      <button class="btn btn-outline-dark btn-lg">INCREASE</button>
+      <button class="btn btn-outline-dark btn-lg decrease">DECREASE</button>
+      <button class="btn btn-outline-dark btn-lg reset">RESET</button>
+      <button class="btn btn-outline-dark btn-lg increase">INCREASE</button>
     </div>
 
   </div>
